apps/gatekeeper/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ska-src-gatekeeper
---
apiVersion: v1
kind: Namespace
metadata:
  name: ska-src-gatekeeper-echo
