apps/gatekeeper/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatekeeper-ingress
  namespace: ska-src-gatekeeper
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: ska-src-service-gatekeeper-ingress-nginx-controller
            port:
              number: 80
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: ska-src-gatekeeper-echo
                port:
                  number: 8080
          - path: /preparedata
            pathType: Prefix
            backend:
              service:
                name: preparedata-api
                port:
                  number: 8000
          - path: /soda
            pathType: Prefix
            backend:
              service:
                name: ska-src-soda
                port:
                  number: 8080
  tls:
  - hosts:
    - ""
    secretName: gatekeeper-cert
